tests/golden/parse_errors/struct_missing_field_name.cd
struct Person { name: number }
print Person { : 1 };
