tests/golden/parse_errors/struct_missing_field_name.err
Parse error at 2:16: expected struct field name, found Colon `:`
  print Person { : 1 };
                 ^
Parse error at 2:21: expected expression
  print Person { : 1 };
                      ^
